<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 SlimRoms Project
     Copyright (C) 2017 Victor Lapin
     Copyright (C) 2017 Griffin Millender

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">Slim Theme Manager</string>

    <string name="no_themes_title">No themes found.</string>
    <string name="no_themes_description">Why don\'t you download a new theme?</string>
    <string name="no_installed_overlays_title">No installed overlays.</string>
    <string name="no_installed_overlays_description">You should install something first.</string>
    <string name="loading">Loading, please wait…</string>
    <string name="loading_short">Loading…</string>
    <string name="no_overlays_selected">No overlays selected</string>
    <string name="no_style_selected">Select a style from the dropdown list</string>
    <string name="reboot_required">A restart is required after the overlays have been applied</string>
    <string name="preview">Preview</string>
    <string name="apply">Apply</string>
    <string name="signature_mismatch_title">Signature mismatch</string>
    <string name="signature_mismatch">This version of the app does not seem to be properly signed. Slim Theme Manager will close.</string>
    <string name="signed">Signed</string>
    <string name="not_signed">Not signed</string>
    <string name="wrong_signature">Wrong signature</string>
    <string name="apply_wallpaper">Apply this wallpaper?</string>
    <string name="applying">Applying…</string>
    <string name="select">Select</string>
    <string name="overlay_update">Update: %1$s -> %2$s</string>

    <!-- Actions -->
    <string name="action_select_all">Select all</string>
    <string name="action_reboot">Restart</string>
    <string name="action_select_none">Clear selection</string>
    <string name="action_dismiss">Dismiss</string>

    <!-- NavDrawer -->
    <string name="nav_themes">Themes</string>
    <string name="nav_group_more">More</string>
    <string name="nav_about">About</string>
    <string name="nav_group_actions">Actions</string>
    <string name="nav_uninstall_overlays">Uninstall overlays</string>

    <!-- Theme contents tab titles -->
    <string name="group_title_overlays">Overlays</string>
    <string name="group_title_fonts">Fonts</string>
    <string name="group_title_bootanimations">Bootanimations</string>
    <string name="group_title_wallpapers">Wallpapers</string>

    <!-- About activity -->
    <string name="versions">Versions</string>
    <string name="the_team">The Team</string>
    <string name="credits">Credits</string>
    <string name="about_team_victor">Victor Lapin</string>
    <string name="about_team_griffin">Griffin Millender</string>
    <string name="about_team_cristian">Cristian Giordano</string>
    <string name="about_team_josue">Josue Rivera</string>
    <string name="about_team_yank">Jean-Pierre Rasquin</string>
    <string name="about_architect">Architect and Developer</string>
    <string name="about_developer">Developer</string>
    <string name="about_designer">Designer</string>
    <string name="about_coordinator">Development Coordinator</string>
    <string name="about_credits_austin">Austin Andrews</string>
    <string name="about_credits_austin_text">Material design icons</string>

    <!-- Font preview -->
    <string name="label_latin">Latin:</string>
    <string name="label_cyrillic">Cyrillic:</string>
    <string name="label_latin_bold">Latin Bold:</string>
    <string name="label_cyrillic_bold">Cyrillic Bold:</string>
    <string name="preview_latin_text" translatable="false">This is a new font</string>
    <string name="preview_cyrillic_text" translatable="false">Это новый шрифт</string>

</resources>
