<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 SlimRoms Project
     Copyright (C) 2017 Victor Lapin
     Copyright (C) 2017 Griffin Millender

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_themes" android:checked="true" android:icon="@drawable/ic_drawer_themes"
            android:title="@string/nav_themes" />
    </group>

    <item android:title="@string/nav_group_actions">
        <menu>
            <item android:id="@+id/nav_uninstall_overlays" android:icon="@drawable/delete"
                android:title="@string/nav_uninstall_overlays" />
        </menu>
    </item>

    <item android:title="@string/nav_group_more">
        <menu>
            <item android:id="@+id/nav_about" android:title="@string/nav_about"
                android:icon="@drawable/ic_drawer_about" />
        </menu>
    </item>

</menu>
