<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_medium"
    android:columnCount="2" android:rowCount="4" android:orientation="horizontal"
    android:padding="@dimen/margin_medium">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/label_latin"
        android:textColor="@color/primary"
        style="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_row="0" android:layout_column="0" />

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/preview_latin" style="@style/TextAppearance.AppCompat"
        android:text="@string/preview_latin_text" android:textSize="@dimen/preview_font_size"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_row="0" android:layout_column="1" />

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/label_latin_bold"
        android:textColor="@color/primary"
        style="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_row="1" android:layout_column="0" />

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/preview_latin_bold" style="@style/TextAppearance.AppCompat"
        android:text="@string/preview_latin_text" android:textSize="@dimen/preview_font_size"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_row="1" android:layout_column="1" />

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/label_cyrillic"
        android:textColor="@color/primary"
        style="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_row="2" android:layout_column="0" />

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/preview_cyrillic" style="@style/TextAppearance.AppCompat"
        android:text="@string/preview_cyrillic_text" android:textSize="@dimen/preview_font_size"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_row="2" android:layout_column="1" />

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/label_cyrillic_bold"
        android:textColor="@color/primary"
        style="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_row="3" android:layout_column="0" />

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/preview_cyrillic_bold" style="@style/TextAppearance.AppCompat"
        android:text="@string/preview_cyrillic_text" android:textSize="@dimen/preview_font_size"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_row="3" android:layout_column="1" />

</GridLayout>